correction contraste background page accueil

--- a/style.css
+++ b/style.css
@@ -799,7 +799,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgb(112, 102, 73);
+    background-color: rgb(63, 53, 21);
     padding: 40px 40px 40px 40px;
 }
 
